--- a/src/app/components/spotify/spotify.component.html
+++ b/src/app/components/spotify/spotify.component.html
@@ -1,4 +1,4 @@
-<button class="btn-default animation-on-browser" type="button" (click)="loginSpotify();">Connexion</button>
+<button class="btn-default animation-on-browser" type="button" (click)="loginSpotify();">test</button>
 
 <div class="col-lg-8">
   <!-- Si on est connecté on affiche Spotify -->
@@ -21,10 +21,6 @@
         <div class="row">
           <div id="song_4" class="col"></div>
           <div id="song_5" class="col"></div>
-        </div>
-        <div class="row">
-          <div id="song_6" class="col"></div>
-          <div id="song_7" class="col"></div>
         </div>
       </div>
     </div>
