--- a/src/app/components/spotify/spotify.component.html
+++ b/src/app/components/spotify/spotify.component.html
@@ -1,4 +1,4 @@
-<button class="btn-default animation-on-browser" type="button" (click)="loginSpotify();">tst</button>
+<button class="btn-default animation-on-browser" type="button" (click)="loginSpotify();">test</button>
 
 <div class="col-lg-8">
   <!-- Si on est connecté on affiche Spotify -->
